[package]
name = "h11"
version = "0.1.0"
edition = "2021"
description = "A pure-Rust, bring-your-own-I/O implementation of HTTP/1.1"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
